--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "norgopolis-client"
+description = "A Rust client for Norgopolis."
+repository = "https://github.com/nvim-neorg/norgopolis-client"
 version = "0.1.0"
+license = "MIT"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
