--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,7 @@ rmp-serde = "1.1.1"
 serde = "1.0.163"
 tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
 tonic = "0.9.2"
+
+[features]
+default = ["autostart-server"]
+autostart-server = []
