--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,5 @@ tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
 tonic = "0.9.2"
 
 [features]
-default = ["autostart-server"]
+default = []
 autostart-server = []
